--- a/index.html
+++ b/index.html
@@ -267,6 +267,12 @@
                 </fieldset>
             </div>
         </div>
+        <div class="google-maps container">
+            <div class="google-maps__geo">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1521.1285487608138!2d60.60140507193405!3d56.83752560152343!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43c16e8af9376a85%3A0x3600ae94177a9e1d!2z0KPRgNCw0LvRjNGB0LrQuNC5INCT0L7RgdGD0LTQsNGA0YHRgtCy0LXQvdC90YvQuSDQmtC-0LvQu9C10LTQtiDQmNC80LXQvdC4INCYLtCYLtCf0L7Qu9C30YPQvdC-0LLQsC4!5e0!3m2!1sru!2sru!4v1655625263312!5m2!1sru!2sru"
+                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
     </main>
     <footer class="header">
         <nav class="header__navigation navigation">
